adds proofed code walkthrough

--- a/docs/Visual Editor Final Report/ve_final_report.tex
+++ b/docs/Visual Editor Final Report/ve_final_report.tex
@@ -34,6 +34,14 @@
 \section{Requirements Evaluation}
 
 \section{System Design and Architecture}
+\subsection{Code Walkthrough}
+Our code starts with some global declarations, including universal main which is passed to story creator. Universal main is the string of method calls that the end-user has written.  The code then defines some regular expressions that check the input from the users to ensure they are the correct data type. There is some code that animation team added that keeps track of which sprites are currently on the canvas. The array called "tools" contains each of the available methods which come in three types: "method," "predefined," and "control" (defined later). The next major part is a function called "promptUser". This method has two more methods inside it—-"loadUpSpritesToAnimate" and "loadSprites", both of which make sure we have a sprite selected from the object box beneath the story canvas. Then there is a series of if statements that check what kind of method has been dragged and prompt for the appropriate arguments. The regular expressions from earlier check that these inputs are the proper types. At the end of promptUser we return a string of the JavaScript block that has been dragged over.\\
+
+The next big one is "newRect" which makes the draggable boxes seen in the editor. The color of the box is based on what kind of box it is (control, method, etc). "Predefined" boxes are method calls received from animation team; "control" boxes are statements like if, else, and while; and all other boxes ("method" boxes) are default methods (main, etc). The method newRect then sets up the text to display on the box, followed by defining the behaviors of the box on dragstart, double click, and dragend. On dragstart the box is moved across the canvas following the cursor. If the box has not been dragged across the threshold line (created later) before, it's cloned, if it doesn't cross the threshold line, the box gets deleted. Double click only applies to boxes that have been defined as "sortable" (which happens when the box is cloned, since this means it is a box the user has created). Once defined "sortable", we prompt the user, update the text and the size of the box based on the text, allowing users to change their previously generated method calls. Behavior on dragend does a lot of the same things: set the position, check if it has been dropped across the line, if it has been we prompt for parameters again, elsewise the box is deleted. We once again use the "sort" method and set it so that it knows that it has been cloned.\\
+
+The next important section prepares the stage and the threshold line, which acts as a visual marker for the division between the "staging area" where the boxes are kept, and the "working area" where the user builds their code. A little lower, the function "newTab" draws the tabs in the staging area. The tabs have their own text and rectangle definitions. On switching tabs, the function basically destroys everything that's been drawn beneath them and draws new boxes. 
+Beneath all the tab code, there is a method called "cleanup" that converts the array of method calls from the user into a JSON string. Below that, the method "loadBlocks" checks through the array we've been keeping everything in (stored as a JSON object), parses it back into an array, and draws the boxes in that array. The last big part of the code is "sortable", which is in its own file. The mainly it has the method "sorter" go through the staging area (the right-hand side) of the canvas checking y-coordinates of the boxes and then adds them to an array in that order. The method beneath it, "lookUp" adds the array to the string universal main, which is later passed to animation.
+
 
 \section{Reflection: Vikram Nilakantan}
 \subsection{Challenges}
@@ -63,7 +71,7 @@ Some of the main challenges I experienced during development were learning a new
 The technique that I most frequently used over the course of the semester was the idea of iterative development. Since our requirements and goals were constantly shifting, we had to adapt every time we got a new direction. It was also nice to see that is consistent with how most software engineering firms operate.   
 
 \subsection{Different Approach}
-If we started over, I think we would probably seek out another graphics package to use for our user interface. While kinetic.js offered quite a bit of useful tools, I think one that supported text input would have probably suited our needs better. We landed on kinetic.js after trying to get things to work with JQuery UI as well as other graphics packages. As we approached the first implementation, we just had to go with kinetic.js. If we wanted to continue development we could find a better package that would suit our needs more appropriately. Now that we are at a decent position, I think there is a lot that could be done. It would be really great to add method box encapsulation like we wanted to do. Now that things are up and running, it is easy to see things that could be improved on and how to make the software easier to use for the user. 
+If we started over, I think we would probably seek out another graphics package to use for our user interface. While kinetic.js offered quite a bit of useful tools, I think one that supported text input would have probably suited our needs better. We landed on kinetic.js after trying to get things to work with jQuery UI as well as other graphics packages. As we approached the first implementation, we just had to go with kinetic.js. If we wanted to continue development we could find a better package that would suit our needs more appropriately. Now that we are at a decent position, I think there is a lot that could be done. It would be really great to add method box encapsulation like we wanted to do. Now that things are up and running, it is easy to see things that could be improved on and how to make the software easier to use for the user. 
 
 
 \section{Reflection: Jessica Penick}
@@ -85,7 +93,7 @@ If we were to start over, I would do a few things differently: 1) I'd choose a g
 The project started trying to use the waterfall method, however as it progressed the lack of direction made the waterfall method challenging. This led to our team and a few others moving to a more agile approach. Agile helped us get a product that worked in a shorter amount of time as we were able to progress and find different problems instead of spending all of our time planning and then quickly finding new issues. Other issues included communication between people with diverse schedules, and working with tools and languages I was unfamiliar with, mostly JavaScript and GitHub.
 
 \subsection{Starting this Project Over}
-I think writing requirements as a class with Joel as the “client” could have made for a better use of the waterfall method as everyone would have a better understanding of the overall project, which would help with moving forward on the individual modules and solve division of labor/dependency issues. Another issue the project had was a lack of experience with the languages/tools groups would be using took the focus off of the software engineering problems and made them more implementation problems. I believe that a stronger focus on learning the tools and languages at the start of a project will make it clear what problems may arise and possible ways to solve them. 
+I think writing requirements as a class with Joel as the "client" could have made for a better use of the waterfall method as everyone would have a better understanding of the overall project, which would help with moving forward on the individual modules and solve division of labor/dependency issues. Another issue the project had was a lack of experience with the languages/tools groups would be using took the focus off of the software engineering problems and made them more implementation problems. I believe that a stronger focus on learning the tools and languages at the start of a project will make it clear what problems may arise and possible ways to solve them. 
 
 \subsection{Learning}
 In the end some of the more valuable things I learned were how to write code as a group, and how to use tools such as GitHub. I also learned that knowledge is the most important tool in software development.  If a group comes in knowledgeable about the tools and about what the goal is that they will build even complex projects in fairly short about of time.
@@ -93,13 +101,13 @@ In the end some of the more valuable things I learned were how to write code as 
 \section{Reflection: Walker Bohannan}
 \subsection{Challenges}
 		
-	Developing the Visual Editor platform for the Edith project involved a tremendous amount of work, and creating boxes with which to create and edit code with was not without its difficulties. Some specific challenges that I encountered in the beginning was on deciding which framework to use. Some options we considered were jQuery UI, RaphaelJS, finally settling with KineticJS, which offered the tools to manipulate what we needed to on a HTML5 canvas. Organizational issues often arose with cross-team integration of using GitHub, and resolving conflicts was not always as simple as we might have hoped. In the end, we figured out how to solve these problems, and came away from the problems with renewed expertise and troubleshooting skills regarding GitHub. That being said, I was always extra careful of any changes I made when pushing to Git, and being sure if I needed to modify another group's code I was explicit in what I did and commented my changes so they would not be deleted. Another challenge which required being overcome was a mid-project reassessment of what our role in the project as a whole was. Our requirements were not explicit until this point, and until then there was a lot of, "well the other group is taking care of that," going on not just in our group but in others as well. Other challenges was learning a new language - Javascript, which I knew none of prior to this course. The syntax quickly came in, and past coding experienced helped, and soon I was enjoying using a new language as I had used others, which only minor hiccups along the way.
+	Developing the Visual Editor platform for the Edith project involved a tremendous amount of work, and creating boxes with which to create and edit code with was not without its difficulties. Some specific challenges that I encountered in the beginning was on deciding which framework to use. Some options we considered were jQuery UI, RaphaelJS, finally settling with KineticJS, which offered the tools to manipulate what we needed to on a HTML5 canvas. Organizational issues often arose with cross-team integration of using GitHub, and resolving conflicts was not always as simple as we might have hoped. In the end, we figured out how to solve these problems, and came away from the problems with renewed expertise and troubleshooting skills regarding GitHub. That being said, I was always extra careful of any changes I made when pushing to Git, and being sure if I needed to modify another group's code I was explicit in what I did and commented my changes so they would not be deleted. Another challenge which required being overcome was a mid-project reassessment of what our role in the project as a whole was. Our requirements were not explicit until this point, and until then there was a lot of, "well the other group is taking care of that," going on not just in our group but in others as well. Other challenges was learning a new language - JavaScript, which I knew none of prior to this course. The syntax quickly came in, and past coding experienced helped, and soon I was enjoying using a new language as I had used others, which only minor hiccups along the way.
 
 \subsection{Applied Software Engineering}
-	A software engineering technique that helped us during the process was using rapid application development, where we constructed prototypes, and would test them (lining up with the deadlines for our integration tests). We iteratively developed our prototypes. We also fulfilled one of the main principles of rapid application development by emphasizing the “business need,” which was being able to create and write code using blocks rather than focusing on the technological excellence. We used ourselves to act as the users, testing continuously. In continuity with our integration deadlines, we focused on reducing implementations and making our deadlines with what we had working well. Another useful technique was to use pair programming, or even group programming, with one person "driving" while the other members looked on. This was especially useful in imparting knowledge of Javascript (which started at zero), as we started this project. We would switch roles often, with different combinations of different group members taking different roles, so nearly everyone had a chance at the controls.
+	A software engineering technique that helped us during the process was using rapid application development, where we constructed prototypes, and would test them (lining up with the deadlines for our integration tests). We iteratively developed our prototypes. We also fulfilled one of the main principles of rapid application development by emphasizing the "business need," which was being able to create and write code using blocks rather than focusing on the technological excellence. We used ourselves to act as the users, testing continuously. In continuity with our integration deadlines, we focused on reducing implementations and making our deadlines with what we had working well. Another useful technique was to use pair programming, or even group programming, with one person "driving" while the other members looked on. This was especially useful in imparting knowledge of JavaScript (which started at zero), as we started this project. We would switch roles often, with different combinations of different group members taking different roles, so nearly everyone had a chance at the controls.
 
 \subsection{Different Approach}
-	If I were to start this project over again, I would probably create my own framework, rather than use KineticJS or something else similar to it. Creating our own framework would enable us to manipulate objects and variables in a way which was efficient and could be used in a way to how we could optimize it. Often I felt as though I was spending a majority of the time figuring out how to make the KineticJS work, figuring out correct syntax rather than being able to go through my code and edit and implement new features. That being said, having the KineticJS framework probably did save us an enormous amount of time, rather than discovering halfway through the project that our own implementation was not going to work. As far as continuing work using the existing code we have, I think method encapsulation would be the next step, as well automatic end bracket creation. However, with how we are implementing it, I think requiring the user to add end brackets is a very relatable aspect of coding, and will teach the user how to code better. That being said, implementing a “compile” function, letting the user know they forgot something syntactically would also be useful.
+	If I were to start this project over again, I would probably create my own framework, rather than use KineticJS or something else similar to it. Creating our own framework would enable us to manipulate objects and variables in a way which was efficient and could be used in a way to how we could optimize it. Often I felt as though I was spending a majority of the time figuring out how to make the KineticJS work, figuring out correct syntax rather than being able to go through my code and edit and implement new features. That being said, having the KineticJS framework probably did save us an enormous amount of time, rather than discovering halfway through the project that our own implementation was not going to work. As far as continuing work using the existing code we have, I think method encapsulation would be the next step, as well automatic end bracket creation. However, with how we are implementing it, I think requiring the user to add end brackets is a very relatable aspect of coding, and will teach the user how to code better. That being said, implementing a "compile" function, letting the user know they forgot something syntactically would also be useful.
 
 
 \end{document}
